tweaked code to manage large lists

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^1.10.3",
     "loadsh": "^0.0.4",
-    "react-dom": "npm:@hot-loader/react-dom"
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-window": "^1.8.6"
   }
 }
